# metadata-code-extractor

./: LICENSE  README.md  pyproject.toml
memory-bank/: activeContext.md  architecture.md  code-scanner-design.md  completeness-evaluator-design.md  configuration-management-design.md  core-data-models.md  database-integration-design.md  detailed-implementation-plan.md  document-scanner-design.md  graph-schema.md  implementation-plan.md  interface-designs.md  llm-adapters-build-log.md  llm-client-build-log.md  llm-integration-design.md  llm-orchestrator-agent-design.md  logging-design.md  metadata_schema.md  orchestration-architecture.md  progress.md  project-structure.md  projectbrief.md  prompt-engineering.md  systemPatterns.md  tasks.md  techContext.md  technology-validation-plan.md  testing-strategy.md
memory-bank/build_log/: configuration-management-build-log.md  dependency-management-build-log.md  llm-cache-build-log.md  llm-client-build-log.md  project-structure-build-log.md  prompt-manager-build-log.md
memory-bank/tech_validation/: README.md  config_poc.py  graph_db_poc.py  llm_poc.py  run_validation.sh  technology_selections.md  validation_checklist.md  vector_db_poc.py
metadata_code_extractor/: __init__.py
metadata_code_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
metadata_code_extractor/core/: config.py  logging.py
metadata_code_extractor/core/llm/: adapters.py  client.py
metadata_code_extractor/core/models/: config_models.py  llm.py  llm_models.py
metadata_code_extractor/integrations/llm/: __init__.py  cache.py  client.py
metadata_code_extractor/integrations/llm/providers/: adapters.py
metadata_code_extractor/prompts/: manager.py
tests/unit/: test_config_loader.py  test_config_models.py  test_llm_adapters.py  test_llm_client.py  test_logging.py  test_prompt_manager.py
tests/unit/integrations/llm/: test_cache.py  test_cache_integration.py
